fix(pie-docs): DSW-1604 repalce fozzie z-index values with pie-css

--- a/apps/pie-docs/src/assets/styles/base/_layout.scss
+++ b/apps/pie-docs/src/assets/styles/base/_layout.scss
@@ -57,7 +57,7 @@
 .c-main,
 .c-footer {
     @include f.media('<wide') {
-        z-index: f.zIndex(low);
+        z-index: 1;
     }
 }
 
