--- a/apps/pie-docs/src/assets/styles/components/_tabs.scss
+++ b/apps/pie-docs/src/assets/styles/components/_tabs.scss
@@ -5,7 +5,8 @@ $tabs-link-padding:                var(--dt-spacing-d);
 $max-scroll-height:                var(--dt-spacing-d);
 
 .c-tabs {
-    z-index: f.zIndex(mid);
+    position: relative;
+    z-index: 1;
     font-weight: var(--dt-font-weight-bold);
 
     ul {
